finished the page

--- a/technical_support.html
+++ b/technical_support.html
@@ -367,7 +367,7 @@
                 <td class="w-[10%]">4354</td>
                 <td class="w-[10%]">استفسار</td>
                 <td class="w-[10%]">8/11/2023</td>
-                <td class="w-[10%] bg-red-200 text-center rounded-lg">جارية</td>
+                <td class="w-[10%] bg-red-200 text-center rounded-lg">منتهية</td>
                 <td class="w-[10%] text-[#25A0D5]"> <a href="">عرض التذكرة</a></td>
             </tr>
         </tbody>
@@ -385,7 +385,7 @@
                 <td class="w-[10%]">4354</td>
                 <td class="w-[10%]">استفسار</td>
                 <td class="w-[10%]">8/11/2023</td>
-                <td class="w-[10%] bg-red-200 text-center rounded-lg">جارية</td>
+                <td class="w-[10%] bg-red-200 text-center rounded-lg">منتهية</td>
                 <td class="w-[10%] text-[#25A0D5]"> <a href="">عرض التذكرة</a></td>
             </tr>
         </tbody>
