--- a/technical_support_ticket.html
+++ b/technical_support_ticket.html
@@ -318,7 +318,7 @@
 <main class=" w-full mt-[81px] lg:mt-[104px] lg:mr-[25%] xl:mr-[20%] 2xl:mr-[15%] mb-6 lg:w-[75%] xl:w-[80%] 2xl:w-[85%] ">
     <section class="mr-[2.5%]">
     <div class="flex mt-[101px] md:mt-[151px] xl:mt-40 mr-1 sm:mr-[2.5%] ">
-        <h4 class="text-[#BDBDBD] text-xs md:text-base xl:text-xl underline"> الاشتراكات <h4 class="text-[#BDBDBD] text-xs md:text-base xl:text-xl underline">>الفروع </h4> <h2 class="text-[#25A0D5] text-xs md:text-base xl:text-xl underline "> > </h2> <h4 class="text-[#25A0D5] text-xs md:text-base xl:text-xl underline ">منشأة امل الخير</h4></h4>
+        <h4 class="text-[#BDBDBD] text-xs md:text-base xl:text-xl underline">الدعم الفني <h2 class="text-[#25A0D5] text-xs md:text-base xl:text-xl underline "> > </h2> <h4 class="text-[#25A0D5] text-xs md:text-base xl:text-xl underline ">إنشاء تذكرة جديدة</h4></h4>
     </div>
     </section>
     <section>
