finished Technical support ticket page

--- a/technical_support_ticket.html
+++ b/technical_support_ticket.html
@@ -322,7 +322,7 @@
     </div>
     </section>
     <section>
-        <fieldset class="border-[#A7A7A7] border mt-7 mx-5 sm:mx-15 md:mx-20 xl:mx-36  py-3 md:py-6 px-5 md:px-10 rounded-3xl">
+        <fieldset class="border-[#E8E8E8] border mt-7 mx-5 sm:mx-15 md:mx-20 xl:mx-36  py-3 md:py-6 px-5 md:px-10 rounded-3xl">
         <div class="text-center mb-5 md:mb-11 ">
                 <h2 class="text-[#25A0D5] text-[20px] xl:text-[26px] font-bold m-auto">إنشاء تذكرة جديدة</h2>
         </div>
