--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="flex flex-col justify-center w-full">
-        <a href="dashboard.html">لوحة التحكم</a>
+        <a class="text-red-500" href="dashboard.html">لوحة التحكم</a>
         <a href="G-a-r-a-s-u.html">التقارير</a>
-        <a href="nationality-ratios.html">تقرير الجسيات</a>
+        <a class="text-red-500" href="nationality-ratios.html">تقرير الجسيات</a>
         <a href="new_localizition.html">الجنسيات جديد</a>
         <a href="new-subscriptons.html">الإشتراكات</a>
         <a href="nitaqat-report.html">تقرير نطاقات</a>
