--- a/invoice.html
+++ b/invoice.html
@@ -427,6 +427,42 @@
                 </div>
         </fieldset>
     </section>
+        <section>
+        <!-- text-[8px] md:text-sm xl:text-base -->
+        <table class="text-[10px] leading-[10px] md:text-sm  mt-7 m-auto w-[95%]">
+            <thead>
+                <tr class="flex bg-[#ECECEC] justify-around rounded-xl mb-5 items-center md:gap-8 xl:gap-11 sm:gap-[11px] text-justfiy px-[10px]">
+                    <th class="w-[12%]">تفاصيل الخدمة</th>
+                    <th class="w-[12%]">سعر الخدمة</th>
+                    <th class="w-auto">المبلغ الخاضع للضريبة</th>
+                    <th class="w-[12%]">الخصومات</th>
+                    <th class="w-[12%]">نسبة الضريبة</th>
+                    <th class="w-[12%]">مبلغ الضريبة</th>
+                    <th class="w-auto">المجموع شامل الضريبة</th>
+                    </tr>
+            </thead>
+
+            <tbody>
+                <tr class="flex justify-around  items-center border  gap-1 md:gap-8 xl:gap-11 text-justfiy rounded-2xl px-[10px] font-[Inter]">
+                    <td class="w-[12%]">اشتراك سنوي</td>
+                    <td class="w-[12%]">
+                        1100 ر.س
+                    </td>
+                    <td class="w-[12%]">
+                        1150 ر.س
+                    </td>
+                    <td class="w-[12%]">-</td>
+                    <td class="w-[12%]">15%</td>
+                    <td class="w-[12%]">
+                        150 ر.س
+                    </td>
+                    <td class="w-[12%]">
+                        1150 ر.س
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
 </section>
 </main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
