--- a/invoice.html
+++ b/invoice.html
@@ -431,7 +431,7 @@
         <!-- text-[8px] md:text-sm xl:text-base -->
         <table class="text-[10px] leading-[10px] md:text-sm  mt-7 m-auto w-[95%]">
             <thead>
-                <tr class="flex bg-[#ECECEC] justify-around rounded-xl mb-5 items-center md:gap-8 xl:gap-11 sm:gap-[11px] text-justfiy px-[10px]">
+                <tr class="flex bg-[#ECECEC] justify-around rounded-xl mb-5 items-center md:gap-8 xl:gap-11 sm:gap-[11px] text-justfiy px-[10px] py-2.5">
                     <th class="w-[12%]">تفاصيل الخدمة</th>
                     <th class="w-[12%]">سعر الخدمة</th>
                     <th class="w-auto">المبلغ الخاضع للضريبة</th>
@@ -442,7 +442,7 @@
                     </tr>
             </thead>
             <tbody>
-                <tr class="flex justify-around  items-center border  gap-1 md:gap-8 xl:gap-11 text-justfiy rounded-2xl px-[10px] font-[Inter]">
+                <tr class="flex justify-around  items-center border  gap-1 md:gap-8 xl:gap-11 text-justfiy rounded-2xl px-[10px] font-[Inter] py-2.5">
                     <td class="w-[12%]">اشتراك سنوي</td>
                     <td class="w-[12%]">
                         1100 ر.س
@@ -450,7 +450,7 @@
                     <td class="w-[12%]">
                         1150 ر.س
                     </td>
-                    <td class="w-[12%]">-</td>
+                    <td class="w-[12%] text-center">-</td>
                     <td class="w-[12%]">15%</td>
                     <td class="w-[12%]">
                         150 ر.س
