--- a/invoice.html
+++ b/invoice.html
@@ -321,7 +321,7 @@
                 <h4 class="text-[#BDBDBD] text-xs md:text-base xl:text-xl underline"> الاشتراكات <h4 class="text-[#BDBDBD] text-xs md:text-base xl:text-xl underline">>الفواتير </h4> <h2 class="text-[#25A0D5] text-xs md:text-base xl:text-xl underline "> > </h2> <h4 class="text-[#25A0D5] text-xs md:text-base xl:text-xl underline ">فاتورة رقم  <span>#34567</span></h4></h4>
             </div>
         <!-- نهاية الشريط-->
-<section class="relative mt-7 print:mt-[0px] print:w-[794px] h-[1123px] border border-[2px] border-[#25A0D5] rounded-xl print:mx-0 ml-[2.5%] mr-[2.5%]">
+<section class="relative mt-7 print:mt-[0px] print:w-[794px] max-w-[794px] h-[1123px] border border-[2px] border-[#25A0D5] rounded-xl print:mx-0 ml-[2.5%] mr-[2.5%]">
         <!-- header start -->
             <div class="flex justify-between mt-5 px-4  border-b border-[#25A0D5] border-b-[4px]">
                 <svg class="mb-4" width="44" height="27" viewBox="0 0 44 27" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -458,7 +458,7 @@
         <!-- بداية تفاصيل السعر -->
             <div class="flex border-[#D7D7D7] border mt-6 mx-2 sm:mx-10  py-2 gap-2 justify-around rounded-lg">
             <div>
-                <h3 class="text-[9px] text-[10px]">
+                <h3 class="text-[9px] sm:text-[10px]">
                     الإجمالي ( غير شاملة ضريبة القيمة المضافة )
                 </h3>
                 <p class="text-[9px] sm:text-xs mt-2 text-[#6C6C6C]">
@@ -466,7 +466,7 @@
                 </p>
             </div>
             <div>
-                <h3 class="text-[9px] text-[10px]">
+                <h3 class="text-[9px] sm:text-[10px]">
                     الإجمالي الخاضع للضريبة ( غير شاملة ضريبة القيمة المضافة )
                 </h3>
                 <p class="text-[9px] sm:text-xs mt-2 text-[#6C6C6C]">
@@ -474,7 +474,7 @@
                 </p>
             </div>
             <div>
-                <h3 class="text-[9px] text-[10px]">
+                <h3 class="text-[9px] sm:text-[10px]">
                     مجموع ضريبة القيمة المضافة
                 </h3>
                 <p class="text-[9px] sm:text-xs mt-2 text-[#6C6C6C]">
