--- a/Settings.html
+++ b/Settings.html
@@ -327,7 +327,7 @@
             </div>
             <!-- buttons end -->
             <!-- بداية المربع -->
-            <div class="mt-10 mr-[2.5%]">
+            <div class="mt-10 mx-[2.5%]">
                 <label class="text-base md:text-xl font-bold text-[#25A0D5]">اعدادات الحساب</label>
                 <div class=" mt-7 pr-[2.5%] flex flex-col min-h-[869px] md:min-h-[969px] xl:min-h-[652px]  md:mx-auto rounded-2xl border border-[#D5D5D5]">
                     <div class="mt-10 xl:flex px-5  xl:gap-[50px] xl:w-full ">
