--- a/Settings.html
+++ b/Settings.html
@@ -321,8 +321,8 @@
             <div class="mx-[2.5%] mt-[124px] xl:mt-[154px] ">
                 <label class="text-base md:text-xl font-bold text-[#25A0D5]">الاعدادات</label>
                 <div class="grid grid-cols-2 gap-5 mt-7">
-                    <button class="w-auto max-w-[275px] h-[55px] bg-[#25A0D5] text-white rounded-xl">البيانات الشخصية</button>
-                    <button class="w-auto max-w-[275px] h-[55px] bg-[#EFEFEF] text-[#A1A1A1] rounded-xl">إعدادات الحساب</button>
+                    <button class="w-auto max-w-[275px] h-[55px] bg-[#EFEFEF] text-[#A1A1A1] rounded-xl">البيانات الشخصية</button>
+                    <button class="w-auto max-w-[275px] h-[55px] bg-[#25A0D5] text-white  rounded-xl">إعدادات الحساب</button>
                 </div>
             </div>
             <!-- buttons end -->
