finished the page

--- a/invoice.html
+++ b/invoice.html
@@ -10,7 +10,7 @@
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
     </head>
 <body class="font-['Janna_LT']">
-<aside class=" print:hiddenml-[-100%] fixed z-10 top-0  px-4 w-full hidden lg:flex flex-col justify-between h-screen border-l bg-white transition duration-300 md:w-4/12 lg:ml-0 lg:w-[25%] xl:w-[20%] 2xl:w-[15%]">
+<aside class=" print:hidden ml-[-100%] fixed z-10 top-0  px-4 w-full hidden lg:flex flex-col justify-between h-screen border-l bg-white transition duration-300 md:w-4/12 lg:ml-0 lg:w-[25%] xl:w-[20%] 2xl:w-[15%]">
     <div>
         <div class="flex mt-8 text-center">
             <img src="imges/Ellipse 76.svg" alt="" class="ml-2">
@@ -315,7 +315,7 @@
         </div>
     </nav>
 </header>
-<main class="w-full mt-[81px]  lg:mt-[104px] lg:mr-[25%] xl:mr-[20%] 2xl:mr-[15%] mb-6 lg:w-[75%] xl:w-[80%] 2xl:w-[85%] ">
+<main class="print:mt-[0px] w-full mt-[81px] lg:mt-[104px] lg:mr-[25%] xl:mr-[20%] 2xl:mr-[15%] mb-6 lg:w-[75%] xl:w-[80%] 2xl:w-[85%] ">
         <!-- بداية الشريط-->
             <div class="print:hidden flex mt-[101px] md:mt-[151px] xl:mt-40 mr-[2.5%] ">
                 <h4 class="text-[#BDBDBD] text-xs md:text-base xl:text-xl underline"> الاشتراكات <h4 class="text-[#BDBDBD] text-xs md:text-base xl:text-xl underline">>الفواتير </h4> <h2 class="text-[#25A0D5] text-xs md:text-base xl:text-xl underline "> > </h2> <h4 class="text-[#25A0D5] text-xs md:text-base xl:text-xl underline ">فاتورة رقم  <span>#34567</span></h4></h4>
@@ -323,7 +323,7 @@
         <!-- نهاية الشريط-->
 <section class="relative mt-7 print:mt-[0px] print:w-[794px] max-w-[794px] h-[1123px] border border-[2px] border-[#25A0D5] rounded-xl print:mx-0 ml-[2.5%] mr-[2.5%]">
         <!-- header start -->
-            <div class="flex justify-between mt-5 px-4  border-b border-[#25A0D5] border-b-[4px]">
+            <div class="flex justify-between print:mt-[0px] mt-5 px-4  border-b border-[#25A0D5] border-b-[4px]">
                 <svg class="mb-4" width="44" height="27" viewBox="0 0 44 27" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_1742_21450)">
             <path d="M11.4868 3.11611C11.173 3.00696 10.835 2.94727 10.4842 2.94727C9.70978 2.94727 9.00333 3.2355 8.46803 3.71067C7.84595 4.26121 7.45509 5.0638 7.45509 5.95624V10.2605C7.45509 10.7977 7.02419 11.2373 6.48828 11.2566V13.2701C7.24814 13.2604 7.94062 12.974 8.46803 12.5066C9.00333 12.9818 9.70978 13.2701 10.4842 13.2701C11.2586 13.2701 11.9651 12.9818 12.4998 12.5066C12.5428 12.4687 12.5847 12.4289 12.6254 12.3885C13.1734 11.844 13.5127 11.0914 13.5127 10.2605V5.95624C13.5127 4.64411 12.6667 3.52735 11.4868 3.11611ZM11.4868 10.2599C11.4868 10.8092 11.0371 11.2566 10.4842 11.2566C9.9313 11.2566 9.48097 10.8092 9.48097 10.2599V5.95564C9.48097 5.40631 9.93069 4.95948 10.4842 4.95948C11.0377 4.95948 11.4868 5.40631 11.4868 5.95564V10.2599Z" fill="#25A0D5"/>
