finished the page

--- a/invoice.html
+++ b/invoice.html
@@ -523,7 +523,7 @@
 <!-- بداية الازرار -->
 <div class="print:hidden py-[50px] px-[50px] flex justify-center gap-10">
 <button onclick="window.print();" class="group rounded-lg relative w-[150px] h-[40px] flex items-center border border-cyan-500 bg-[#25A0D5] overflow-hidden hover:bg-cyan-100" style="transition: all 0.3s;" type="button">
-    <span class="translate-x-[-70px] text-white group-hover:stroke-white" style="transition: all 0.3s;">طباعة</span>
+    <span class="translate-x-[-40px] sm:translate-x-[-50px] md:translate-x-[-70px] text-white group-hover:stroke-white" style="transition: all 0.3s;">طباعة</span>
     <span class="absolute translate-x-[5px] h-full w-[39px] bg-cyan-600 flex items-center justify-center group-hover:w-[149px] group-hover:translate-x-0 " style="transition: all 0.3s;">
         <svg width="19" height="18" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_1382_22118)">
@@ -539,7 +539,7 @@
     </span>
 </button>
 <button class="group rounded-lg relative w-[150px] h-[40px] flex items-center border border-cyan-500 bg-[#25A0D5] overflow-hidden hover:bg-cyan-100" style="transition: all 0.3s;" type="button">
-    <span class="translate-x-[-70px] text-white group-hover:stroke-white" style="transition: all 0.3s;">تنزيل</span>
+    <span class="translate-x-[-40px] sm:translate-x-[-50px] md:translate-x-[-70px] text-white group-hover:stroke-white" style="transition: all 0.3s;">تنزيل</span>
     <span class="absolute translate-x-[5px] h-full w-[39px] bg-cyan-600 flex items-center justify-center group-hover:w-[149px] group-hover:translate-x-0 " style="transition: all 0.3s;">
         <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_1382_22113)">
